# metpo

./: .channels_cache_v2.json  .editorconfig  .env.template  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks-guide.md  .users_cache.json  CBORG-CODE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  ICBO_PREP.md  ICBO_PREP_SUMMARY_UPDATED.md  METPO_LLM_Workflow_Summary.md  Makefile  Makefile.metpo-mappings  N4L_Data_Transformation_Workflow.md  PROPERTY_AUDIT.md  QC_REPORT.md  README.md  SCRIPT_INVENTORY_AND_PLAN.md  SECURITY.md  THIS-IS-A-BLOATED-BACKUP.txt  additional_bacdive_paths.md  all_sources_curie_analysis.tsv  analyze_curie_columns.py  api_mapping_provenance_investigation.md  bacdive_chemical_enzyme_gap_analysis.md  bacdive_complete_chemistry_audit.md  bacdive_curie_clean.tsv  bacdive_curie_summary.tsv  bacdive_curie_summary_v2.tsv  bacdive_invalid_curie_ids.md  bacdive_issues_summary.md  bacdive_metpo_coverage_analysis.md  bacdive_normalization_resources_and_gaps.md  bacdive_path_usage_matrix.md  (+96 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  zizmor.yml
Fidelibacter_multiformis/: f_multiformis.Makefile  f_multiformis.tsv  f_multiformis_template.yaml  ijsem.0.006558.abstract.output.yaml
Fidelibacter_multiformis_etc/: Common_Taxa_with_Ranks.csv  NCBITaxon_991-subject-statements.rq  extract.n4l.references.Makefile  f_multiformis.Makefile  f_multiformis.tsv  f_multiformis.ttl  graphs-with-n4l-refid-subjects.tsv  ijsem.0.006558.abstract.output.yaml  ijsem.0.030973-0.abstract.txt  kg-microbe-Association-predicates.tsv  kg-microbe-OrganismTaxon-Association-predicates.rq  kg-microbe-OrganismTaxon-iri-styles.rq  kg-microbe-direct-rdf-types.tsv  kg-microbe-most-associated-taxa.rq  kg-microbe-most-associated-taxa.tsv  kg-microbe-most-statements-taxa.tsv  kg-microbe-types-bioloink-relations.rq  n4l-NCBITaxon_991-subject-statements.tsv  n4l-organism-name-properties.csv  n4l_ref_protolog_orgname_vs_kgmicrobe.py  propetry-hierarchy.nq  protolog-aboutness-summary.tsv  protolog-iri-style-count.csv  protolog-predicates.tsv  pubmed.17684263.abstract.output.yaml  pubmed.17684263.abstract.txt  pubmed.39465541.template.yaml  pubmed.39465541.tsv  unusual-protolog-iris.csv
api_csv_files_recovered/: ALIGNED_VERSION_README.md  COLUMN_GUIDE.md  README.md  UNIFIED_FILE_README.md  all_api_tests_aligned.tsv  all_api_tests_unified.csv  all_api_tests_unified.tsv
assets/: .gitignore  categorize_temperature_ranges.md  flattened_n4l_temperature_components_manually_filtered_quantitative.tsv  loom_pairs.tsv  mapping-notes.txt  metpo-as-obo_vs_MicrO-merged-issue-22-manual-fix.SSSOM.tsv  metpo-as-obo_vs_PATO_PATO_ids.txt  metpo-temperature-ranges-of-classes.csv  metpo_bioportal_mappings.ipynb  metpo_to_mpo_from_loom.txt  metpo_to_omp_from_loom.txt  n4l-temperature.csv
bacdive_chemical_utilization/: bacdive_utilization.tsv  bacdive_utilization_enum.yaml  make_bacdive_utilization_enum.py  visualize_ner.py
config/: metpo_n4l_etc_automated.ttl
data/: README.md
docs/: ACKNOWLEDGMENTS.md  BER CMM Pilot Proposal-revised .docx.md  CLI_STANDARDIZATION_PLAN.md  CLI_STANDARDIZATION_STATUS.md  COMPLETED_REFACTORING.md  CRITICAL_FINDING_culture_temp_ph.md  DATA_SOURCE_INVENTORY.md  DEFINITION_ENRICHMENT_WORKFLOW.md  DEFINITION_IMPROVEMENT_STRATEGY.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_AUDIT_ROUND2.md  ICBO_PREP.md  ICBO_PREP_SUMMARY.md  IMPROVEMENT_SUMMARY_2025-11-15.md  ISSUE_python_quality_checks.md  LLM_ANALYSIS_CONCLUSIONS.md  METPO_CAPABILITIES.md  METPO_JUSTIFICATION.md  METPO_SHEET_VERSION_HISTORY.md  NON_OLS_ONTOLOGY_STATUS.md  ONTOLOGY_PIPELINE.md  PR_290_208_ANALYSIS.md  README.md  SCRIPT_CLEANUP_CANDIDATES.md  UV_REINSTALL_ISSUE.md  bacdive_culture_temp_analysis.md  bacdive_keywords_analysis.md  bacdive_keywords_inventory.tsv  bacdive_oxygen_tolerance_analysis.md  bacdive_structured_path_value_counts.tsv  bactotraits_metpo_action_plan.md  bactotraits_naming_reference.md  bactotraits_reconciliation_and_pipeline.md  casamino_acids_curie_mapping_case_study.md  chromadb_audit_report.md  chromadb_audit_results.txt  cli-reference.md  collaborator_orgs_and_repos.md  current_audit.txt  deprecation-workflow.md  (+49 more)
lint-baselines/: classes.json  properties.json
literature_mining/: .gitignore  .~lock.publication_ids.tsv#  21602360-abstract.txt  21602360-output.yaml  35476601-abstract.txt  35476601-output.yaml  ASSESSMENT_ROADMAP.md  LLM_PROVIDER_CONFIGURATION.md  METPO_database_synonyms.tsv  Makefile  PHASE_3_SPECIALIZATION_REPORT.md  README_ICBO_ANALYSIS.md  analyze_coverage_by_source_type.py  analyze_metpo_database_alignment.py  analyze_metpo_efficiency.py  analyze_metpo_grounding.py  analyze_metpo_grounding_filtered.py  analyze_ontogpt_logs.py  chem_interaction_props_enum.yaml  domain_grounding_analysis.py  entity_relationship_assessment.py  extraction_analysis_baseline.md  extraction_benchmarks.tsv  find_metpo_terms.py  grounding_quality_assessor.py  metpo_assessor.py  ontogpt_template.yaml  ontogpt_template_base.yaml  publication_ids.tsv  random-extractions.yaml  random-n4l-pmids.txt  simple_assessment_report.md  simple_assessment_report_fixed.md  taxa-all-extractions.yaml  taxa_template.yaml  template_analysis.md  template_quality_assessor.py  template_specialization_analyzer.py  unified_assessment.py  validate_extractions.py
metadata/: README.md  bactotraits_field_mappings.json  madin_files.json
metpo/: .htaccess  __init__.py  advanced_salinity_parsing.ipynb  categorize_temperature_ranges.ipynb  classify_temperature_values.ipynb  classify_temperature_values.ran.ipynb  cli_common.py  import_bactotraits.py  n4l-xlsx-parsing-config.tsv  n4l_tables_to_quads.ipynb  n4l_tables_to_quads.ran.ipynb  observed_kg_microbe_patterns.ipynb  parse_salinity_llm.py  parsed_salinity.owl.ttl  sheets_config.py  (+3 more)
metpo-cleanroom/: media_normalized_20130916_ingredient.csv  metpo-cleanroom-lexmatch-SSSOM.tsv  metpo-cleanroom.md  metpo-cleanroom.ttl  metro-cleanroom.ttl  n4l-xlsx-parsing-config.tsv  n4l_tables_to_quads.ipynb  predicate_mapping_n4l_specific.csv
(+11136 files in other folders)
