[project]
name = "metpo"
version = "0.3.0"
description = "The Microbial Ecophysiological Trait and Phenotype Ontology"
authors = [
    {name = "Mark Andrew Miller", email = "mam@lbl.gov"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ontology", "microbiology", "phenotypes", "traits", "obo"]
license = {text = "CC-BY-4.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.3.0",
    "kgx>=2.1.0",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rdflib>=7.1.4",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/berkeleybop/metpo"
Repository = "https://github.com/berkeleybop/metpo"
Issues = "https://github.com/berkeleybop/metpo/issues"
Documentation = "https://github.com/berkeleybop/metpo/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "oaklib>=0.6.23",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "rdflib>=7.1.4",
    "semsql>=0.4.0",
    "tqdm>=4.67.1",
    "litellm>=1.79.0",
    "openai>=2.6.1",
    # Code quality tools
    "black>=24.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
]
literature = [
    "artl-mcp>=0.34.0",
    "linkml>=1.8.5",
    "oaklib>=0.6.23",
    "ontogpt>=1.0.18",
    "pandas>=2.3.3",
    "litellm>=1.79.0",
    "openai>=2.6.1",
    "semsql>=0.4.0",
]
databases = [
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
]
notebooks = [
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "matplotlib>=3.10.7",
    "numpy>=2.0.2",
    "python-levenshtein>=0.27.1",
    "chromadb>=1.2.2",
    "tqdm>=4.67.1",
    "openai>=2.6.1",
]

[project.scripts]
# Tools
extract-rank-triples = "metpo.tools.extract_rank_triples:extract_taxon_ranks"
convert-chem-props = "metpo.tools.convert_chem_props:convert_chem_props"
import-bactotraits = "metpo.tools.import_bactotraits:import_bactotraits"
make-bacdive-utilization-enum = "metpo.tools.make_bacdive_utilization_enum:convert_tsv_to_linkml"

# BactoTraits
reconcile-bactotraits-coverage = "metpo.bactotraits.reconcile_bactotraits_coverage:main"
reconcile-madin-coverage = "metpo.bactotraits.reconcile_madin_coverage:main"
bactotraits-metpo-set-difference = "metpo.bactotraits.bactotraits_metpo_set_difference:main"
create-bactotraits-field-mappings = "metpo.bactotraits.create_bactotraits_header_mapping:main"
create-bactotraits-file-versions = "metpo.bactotraits.create_bactotraits_file_versions:main"
create-bactotraits-files = "metpo.bactotraits.create_bactotraits_files:main"
create-stubs = "metpo.bactotraits.create_stubs:main"
migrate-range-metadata = "metpo.bactotraits.migrate_range_metadata_v2:main"
update-manifest = "metpo.bactotraits.update_manifest:main"
scan-manifest = "metpo.bactotraits.scan_manifest:main"
download-ontology = "metpo.bactotraits.download_ontology:main"
query-ontology = "metpo.bactotraits.query_ontology:main"

# Pipeline
categorize-ontologies = "metpo.pipeline.categorize_ontologies:main"
analyze-matches = "metpo.pipeline.analyze_matches:main"
embed-ontology-to-chromadb = "metpo.pipeline.embed_ontology_to_chromadb:main"
fetch-ontology-names = "metpo.pipeline.fetch_ontology_names:main"
chromadb-semantic-mapper = "metpo.pipeline.chromadb_semantic_mapper:main"
analyze-sibling-coherence = "metpo.pipeline.analyze_sibling_coherence:main"
analyze-coherence-results = "metpo.pipeline.analyze_coherence_results:main"

# Database
migrate-to-chromadb = "metpo.database.migrate_to_chromadb_resilient:main"
audit-chromadb = "metpo.database.audit_chromadb:main"
combine-chromadb = "metpo.database.combine_chromadb:main"
filter-ols-chromadb = "metpo.database.filter_ols_chromadb:main"

# Analysis
analyze-ontology-value = "metpo.analysis.analyze_ontology_value:main"
analyze-match-quality = "metpo.analysis.analyze_match_quality:main"
analyze-definition-opportunities = "metpo.scripts.analyze_definition_opportunities:main"
bootstrap-definition-enrichment = "metpo.scripts.bootstrap_definition_enrichment:main"
plot-embedding-similarity = "metpo.scripts.plot_embedding_similarity:main"
find-best-definitions = "metpo.scripts.find_best_definitions:main"
find-best-definitions-comprehensive = "metpo.scripts.find_best_definitions_comprehensive:main"
compare-definitions-with-hierarchy = "metpo.scripts.compare_definitions_with_hierarchy:main"
analyze-definition-coverage-by-subtree = "metpo.scripts.analyze_definition_coverage_by_subtree:main"
iterative-definition-improvement = "metpo.scripts.iterative_definition_improvement:main"

# Quality Control
qc-metpo-sheets = "metpo.scripts.qc_metpo_sheets:main"
fetch-metatraits = "metpo.scripts.fetch_metatraits:main"
resolve-metatraits-in-sheets = "metpo.scripts.resolve_metatraits_in_sheets:main"
audit-metatraits-curies = "metpo.scripts.audit_metatraits_substrate_curies:main"
demo-metatraits-mongo-to-kgx = "metpo.scripts.demo_metatraits_mongo_to_kgx:main"
propose-definitions-with-llm = "metpo.scripts.propose_definitions_with_llm:main"

# Definition Work
fetch-source-metadata = "metpo.scripts.definition_work.fetch_source_metadata:main"
merge-sparql-with-metadata = "metpo.scripts.definition_work.merge_sparql_with_metadata:main"
regenerate-curator-attributions = "metpo.scripts.definition_work.regenerate_curator_attributions:main"

# Literature Mining - Analysis
visualize-ner = "metpo.literature_mining.analysis.visualize_ner:main"
metpo-assessor = "metpo.literature_mining.analysis.metpo_assessor:cli"
analyze-metpo-grounding = "metpo.literature_mining.analysis.analyze_metpo_grounding:main"
analyze-metpo-grounding-filtered = "metpo.literature_mining.analysis.analyze_metpo_grounding_filtered:main"
extract-metpo-entities = "metpo.literature_mining.analysis.extract_metpo_entities:main"
find-metpo-terms = "metpo.literature_mining.analysis.find_metpo_terms:main"
analyze-extractions = "metpo.literature_mining.analysis.analyze_extractions:main"
analyze-coverage-by-source = "metpo.literature_mining.analysis.analyze_coverage_by_source_type:main"
analyze-metpo-efficiency = "metpo.literature_mining.analysis.analyze_metpo_efficiency:main"
analyze-metpo-database-alignment = "metpo.literature_mining.analysis.analyze_metpo_database_alignment:main"
compare-extractions = "metpo.literature_mining.analysis.compare_extractions:main"
validate-extractions = "metpo.literature_mining.analysis.validate_extractions:main"

# Literature Mining - Utilities
fetch-abstracts-from-dois = "metpo.literature_mining.scripts.fetch_abstracts_from_dois:main"
extract-abstracts-from-files = "metpo.literature_mining.scripts.extract_abstracts_from_files:main"
dedupe-and-filter-abstracts = "metpo.literature_mining.scripts.dedupe_and_filter_abstracts:main"
dedupe-by-content = "metpo.literature_mining.scripts.dedupe_by_content:main"
calculate-extraction-metrics = "metpo.literature_mining.scripts.calculate_metrics:main"

# Madin et al. Analysis
madin-field-summary = "metpo.scripts.madin.generate_field_summary_table:cli"
madin-field-value-reports = "metpo.scripts.madin.generate_field_value_reports:cli"
madin-field-values-analysis = "metpo.scripts.madin.madin_field_values_analysis:cli"
madin-unique-values = "metpo.scripts.madin.madin_unique_values_analysis:cli"
madin-carbon-substrates = "metpo.scripts.madin.madin_carbon_substrates_unpacked:cli"
madin-tax-validation = "metpo.scripts.madin.madin_tax_id_validation:cli"
madin-sample-ids = "metpo.scripts.madin.madin_sample_ids:cli"
madin-load-refs = "metpo.scripts.madin.load_madin_references:cli"
madin-query-refs = "metpo.scripts.madin.query_madin_references:cli"
madin-analyze-cell-shape = "metpo.scripts.madin.analyze_cell_shape:cli"
madin-analyze-isolation = "metpo.scripts.madin.analyze_isolation_source:cli"
madin-analyze-pathways = "metpo.scripts.madin.analyze_pathways_format:cli"
madin-analyze-ref-id = "metpo.scripts.madin.analyze_ref_id_format:cli"
madin-analyze-categorical = "metpo.scripts.madin.analyze_remaining_categorical:cli"
madin-verify-edge-taxids = "metpo.scripts.madin.verify_edge_taxids:cli"
madin-verify-ncbi-taxids = "metpo.scripts.madin.verify_ncbi_taxids:cli"

[tool.hatch.build.targets.wheel]
packages = ["metpo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
